# MusicPlayer

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: V1__init.sql  V2__fix_fts5_triggers.sql  V3__scanner_support.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: library.rs  mod.rs  player.rs  playlist.rs  prefs.rs
src-tauri/src/db/: albums.rs  artists.rs  mod.rs  play_history.rs  playlists.rs  scan_folders.rs  schema.rs  search.rs  testing.rs  tracks.rs
src-tauri/src/metadata/: art.rs  mod.rs  reader.rs
src-tauri/src/player/: decoder.rs  engine.rs  gapless.rs  manager.rs  mod.rs  queue.rs  state.rs
src-tauri/src/system/: now_playing.rs
src-tauri/tests/: scan_e2e.rs
src-tauri/tests/fixtures/audio/: b.flac  c.m4a  generate.sh
src/__tests__/: e2e-integration.test.tsx  repositories.test.ts
src/hooks/: index.ts  useCreatePlaylistMutation.ts  useDebouncedValue.test.ts  useDebouncedValue.ts  useDynamicColors.ts  useKeyboardShortcuts.test.tsx  useKeyboardShortcuts.ts  usePlayer.test.tsx  usePlayer.ts  useScanProgress.test.ts  useScanProgress.ts  useSystemTheme.test.tsx  useSystemTheme.ts  useToggleFavoriteMutation.test.tsx  useToggleFavoriteMutation.ts
src/i18n/: index.ts  keyParity.test.ts
src/lib/: tauri.ts
src/pages/: AlbumDetailPage.tsx  AlbumsPage.tsx  ArtistDetailPage.tsx  ArtistsPage.tsx  SongsPage.tsx  (+13 more)
(+64 files in other folders)
