[package]
name = "musicplayer"
version = "0.5.0"
edition = "2021"
description = "Apple Music style desktop music player"

[lib]
name = "musicplayer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.34", features = ["bundled", "vtab"] }
notify = { version = "7", features = ["macos_kqueue"] }
symphonia = { version = "0.5", features = ["mp3", "aac", "alac", "flac", "pcm", "vorbis", "wav", "isomp4"] }
cpal = "0.15"
lofty = "0.24"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
image = "0.25"
walkdir = "2"
crossbeam-channel = "0.5"
ringbuf = "0.4"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = "0.3"
objc2-media-player = "0.3"
block2 = "0.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[dev-dependencies]
tempfile = "3"
